// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <div
    className="bgColor"
  />
  <h2
    className="edit_add"
  >
    Edit
     Device
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="system_name"
    >
      System Name *
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="system_name"
        onChange={[MockFunction]}
        type="text"
        value="DESKTOP-SMART"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="type"
    >
      Device Type *
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="type"
        onChange={[MockFunction]}
        value="WINDOWS_WORKSTATION"
      >
        <option
          value=""
        >
          Select Device Type
        </option>
        <option
          value="MAC"
        >
          MAC
        </option>
        <option
          value="WINDOWS_SERVER"
        >
          Windows Server
        </option>
        <option
          value="WINDOWS_WORKSTATION"
        >
          Windows Workstation
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="hdd_capacity"
    >
      Capacity *
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="hdd_capacity"
        onChange={[MockFunction]}
        type="text"
        value="10"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <div
    className="bgColor"
  />
  <h2
    className="edit_add"
  >
    Edit
     Device
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="system_name"
    >
      System Name *
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="system_name"
        onChange={[MockFunction]}
        type="text"
        value="DESKTOP-SMART"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="type"
    >
      Device Type *
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="type"
        onChange={[MockFunction]}
        value="WINDOWS_WORKSTATION"
      >
        <option
          value=""
        >
          Select Device Type
        </option>
        <option
          value="MAC"
        >
          MAC
        </option>
        <option
          value="WINDOWS_SERVER"
        >
          Windows Server
        </option>
        <option
          value="WINDOWS_WORKSTATION"
        >
          Windows Workstation
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="hdd_capacity"
    >
      Capacity *
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="hdd_capacity"
        onChange={[MockFunction]}
        type="text"
        value="10"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
